--- a/linux-kernel/dkms.conf
+++ b/linux-kernel/dkms.conf
@@ -2,4 +2,4 @@ PACKAGE_NAME="hid-xiaomiff"
 PACKAGE_VERSION="0.0.1"
 BUILT_MODULE_NAME[0]="hid-xiaomiff"
 DEST_MODULE_LOCATION[0]="/kernel/drivers/hid"
-AUTOINSTALL="yes
+AUTOINSTALL="yes"
